@@ -51,7 +51,6 @@ class Journal {
     private FileOutputStream _fos;
     private DataOutputStream _os;
     private boolean _enabled = false;
-    private boolean _enabledFetches = false;
     private Hashtable _treeHashTable = new Hashtable();
     private Hashtable _threadHashTable = new Hashtable();
     int _maxTreeHandle = 0;
@@ -71,14 +70,12 @@ class Journal {
                 _fos = null;
                 _treeHashTable.clear();
                 _enabled = false;
-                _enabledFetches = false;
             }
             if (path != null) {
                 _fos = new FileOutputStream(path, false);
                 _os = new DataOutputStream(new BufferedOutputStream(_fos,
                         JOURNAL_BUFFER_SIZE));
                 _enabled = true;
-                _enabledFetches = enableFetchOperations;
 
                 Thread flusher = new Thread(new Runnable() {
                     public void run() {
@@ -121,7 +118,6 @@ class Journal {
                 _fos = null;
                 _treeHashTable.clear();
                 _enabled = false;
-                _enabledFetches = false;
             }
         } catch (IOException ioe) {
             // TODO
@@ -369,7 +365,7 @@ class Journal {
             _os.writeUTF(tree.getName());
             _os.writeByte(END_MARKER);
 
-            handleValue = new Integer(treeHandle);
+            handleValue = Integer.valueOf(treeHandle);
             _treeHashTable.put(tree, handleValue);
             return treeHandle;
         }
@@ -388,7 +384,7 @@ class Journal {
             _os.writeUTF(threadName);
             _os.writeByte(END_MARKER);
 
-            handleValue = new Integer(threadHandle);
+            handleValue = Integer.valueOf(threadHandle);
             _threadHashTable.put(threadName, handleValue);
             return threadHandle;
         }
@@ -488,7 +484,7 @@ class Journal {
                     String threadName = is.readUTF();
                     verifyMarker(is, addr);
                     addr += 2 + (threadName.length()) + 1;
-                    Integer threadId = new Integer(threadHandle);
+                    Integer threadId = Integer.valueOf(threadHandle);
                     threadTable.put(threadName, threadId);
                     threadTable.put(threadId, threadName);
                     break;
@@ -736,7 +732,7 @@ class Journal {
             Hashtable exchangeTable) throws IOException {
         int treeHandle = is.readInt();
         Exchange exchange = (Exchange) exchangeTable
-                .get(new Integer(treeHandle));
+                .get(Integer.valueOf(treeHandle));
         if (exchange == null) {
             throw new RuntimeException("No exchange for handle " + treeHandle
                     + " at " + addr);
